--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/TakymLib"]
 	path = lib/TakymLib
 	url = https://github.com/YigtyORG/TakymLib.git
+[submodule "docs/wiki"]
+	path = docs/wiki
+	url = https://github.com/YigtyORG/Exyzer.wiki.git
