--- a/tests/TakymLibTests.csproj
+++ b/tests/TakymLibTests.csproj
@@ -14,6 +14,7 @@
 		<RootNamespace>TakymLibTests</RootNamespace>
 		<IsPackable>false</IsPackable>
 		<ServerGarbageCollection>true</ServerGarbageCollection>
+		<Configurations>Debug;Release;Benchmark</Configurations>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
