--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   Benchmark:
-    runs-on: windows-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2.3.4
     - name: Setup .NET
