Revert "ワークフローのセルフホストの検証"
This reverts commit 047fe286d342e48906e31483bcc562e40fb2dd47.

--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   Benchmark:
-    runs-on: self-hosted
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2.3.4
     - name: Setup .NET
