--- a/.github/workflows/NuGet.yml
+++ b/.github/workflows/NuGet.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   NuGet:
-    runs-on: self-hosted
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2.3.4
     - name: Setup .NET
