ワークフロー、サブモジュールの同期処理を追加。

--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -15,6 +15,8 @@ jobs:
         bc: [ Debug, Release ]
     steps:
     - uses: actions/checkout@v2.3.4
+    - name: Sync Submodules
+      run: git submodule sync --recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v1.8.0
       with:
