--- a/.github/workflows/NuGet.yml
+++ b/.github/workflows/NuGet.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2.3.4
+    - name: Sync Submodules
+      run: git submodule sync --recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v1.8.0
       with:
