--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2.3.4
-    - name: Sync Submodules
-      run: git submodule sync --recursive
+      with:
+        submodules: recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v1.8.0
       with:
