ベンチマークに関するエラー修正

--- a/tests/Exyzer.Tests.csproj
+++ b/tests/Exyzer.Tests.csproj
@@ -15,6 +15,9 @@
 		<ServerGarbageCollection>true</ServerGarbageCollection>
 		<Configurations>Debug;Release;Benchmark</Configurations>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)'=='Benchmark'">
+		<Optimize>true</Optimize>
+	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.2.4" />
