--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -45,7 +45,7 @@
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)'=='Benchmark'">
 		<Optimize>true</Optimize>
-		<DebugType>portable</DebugType>
+		<DebugType>pdbonly</DebugType>
 		<DebugSymbols>true</DebugSymbols>
 	</PropertyGroup>
 	<ItemGroup Label="Resources">
