--- a/tests/Exyzer.Tests.csproj
+++ b/tests/Exyzer.Tests.csproj
@@ -17,6 +17,8 @@
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)'=='Benchmark'">
 		<Optimize>true</Optimize>
+		<DebugType>pdbonly</DebugType>
+		<DebugSymbols>true</DebugSymbols>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
