Revert "ビルド構成に関する実験"
This reverts commit 5add31458c3a1202c381bf9d16e7b7dd6ad8dd22.

--- a/tests/Exyzer.Tests.csproj
+++ b/tests/Exyzer.Tests.csproj
@@ -29,8 +29,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BenchmarkDotNet" Version="0.13.0" />
-		<ProjectReference Include="../src/Exyzer.Core/Exyzer.Core.csproj">
-			<SetConfiguration Condition="'$(Configuration)'=='Benchmark'">Release</SetConfiguration>
-		</ProjectReference>
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="../src/Exyzer.Core/Exyzer.Core.csproj" />
 	</ItemGroup>
 </Project>
