--- a/tests/TakymLibTests.csproj
+++ b/tests/TakymLibTests.csproj
@@ -16,6 +16,11 @@
 		<ServerGarbageCollection>true</ServerGarbageCollection>
 		<Configurations>Debug;Release;Benchmark</Configurations>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)'=='Benchmark'">
+		<Optimize>true</Optimize>
+		<DebugType>pdbonly</DebugType>
+		<DebugSymbols>true</DebugSymbols>
+	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.2.4" />
@@ -25,8 +30,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BenchmarkDotNet" Version="0.13.0" />
-	</ItemGroup>
-	<ItemGroup>
+
 		<!-- ライブラリへの参照は下記のプロジェクトに追加する。 -->
 		<ProjectReference Include="../src/TakymLib.ConsoleApp/TakymLib.ConsoleApp.csproj" />
 	</ItemGroup>
