--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1,3 +1,11 @@
+# ***********************************************************
+# * TakymLib                                                *
+# * Copyright (C) 2020-2021 Yigty.ORG; all rights reserved. *
+# * Copyright (C) 2020-2021 Takym.                          *
+# *                                                         *
+# * distributed under the MIT License.                      *
+# ***********************************************************
+
 - name: APIブラウザ
   href: api/
   homepage: api/index.md
