--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -23,6 +23,8 @@ jobs:
         bc: [ Debug, Release ]
     steps:
     - uses: actions/checkout@v2.3.4
+      with:
+        submodules: recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v1.8.0
       with:
