--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -25,11 +25,14 @@ jobs:
       fail-fast: false
       matrix:
         config: [ Debug, Release ]
+        runtime: [ 'net5.0', 'netcoreapp3.1', 'netstandard2.1', 'net48' ]
         language: [ 'csharp' ]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2.3.4
+      with:
+        submodules: recursive
 
     # Initialize
     - name: Initialize CodeQL
@@ -42,10 +45,8 @@ jobs:
       uses: actions/setup-dotnet@v1.8.0
       with:
         dotnet-version: 5.0.301
-    - name: Restore dependencies
-      run: dotnet restore TakymLib.sln
     - name: Build
-      run: dotnet build -c ${{ matrix.config }} --no-restore
+      run: dotnet build -c ${{ matrix.config }} -f ${{ matrix.runtime }}
 
     # Analyze
     - name: Perform CodeQL Analysis
