--- a/.github/workflows/NuGet.yml
+++ b/.github/workflows/NuGet.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2.3.4
+      with:
+        submodules: recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v1.8.0
       with:
