--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         config: [ Debug, Release ]
-        runtime: [ 'net5.0', 'netcoreapp3.1', 'netstandard2.1', 'net48' ]
+        runtime: [ 'net5.0', 'net48' ]
         language: [ 'csharp' ]
 
     steps:
