--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -25,8 +25,6 @@ jobs:
       fail-fast: false
       matrix:
         config: [ Debug, Release ]
-        runtime: [ 'net5.0' ]
-        language: [ 'csharp' ]
 
     steps:
     - name: Checkout repository
@@ -38,7 +36,7 @@ jobs:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
       with:
-        languages: ${{ matrix.language }}
+        languages: csharp
 
     # Build
     - name: Setup .NET
@@ -46,7 +44,7 @@ jobs:
       with:
         dotnet-version: 5.0.301
     - name: Build
-      run: dotnet build -c ${{ matrix.config }} -f ${{ matrix.runtime }}
+      run: dotnet build -c ${{ matrix.config }}
 
     # Analyze
     - name: Perform CodeQL Analysis
