--- a/src/Exyzer.Apps.Web/Exyzer.Apps.Web.csproj
+++ b/src/Exyzer.Apps.Web/Exyzer.Apps.Web.csproj
@@ -13,5 +13,6 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.7" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.7" PrivateAssets="all" />
 		<PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+		<ProjectReference Include="../Exyzer.Engines.All/Exyzer.Engines.All.csproj" />
 	</ItemGroup>
 </Project>
