--- a/src/Exyzer.Apps.Web.Server/Properties/launchSettings.json
+++ b/src/Exyzer.Apps.Web.Server/Properties/launchSettings.json
@@ -4,8 +4,8 @@
 			"commandName": "Project",
 			"dotnetRunMessages": "true",
 			"launchBrowser": true,
-			"inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/Exyzer/_framework/debug/ws-proxy?browser={browserInspectUri}",
-			"applicationUrl": "https://localhost:5001/Exyzer;http://localhost:5000/Exyzer",
+			"inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+			"applicationUrl": "https://localhost:5001;http://localhost:5000",
 			"environmentVariables": {
 				"ASPNETCORE_ENVIRONMENT": "Development"
 			}
@@ -14,8 +14,8 @@
 			"commandName": "Project",
 			"dotnetRunMessages": "true",
 			"launchBrowser": true,
-			"inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/Exyzer/_framework/debug/ws-proxy?browser={browserInspectUri}",
-			"applicationUrl": "https://localhost:443/Exyzer;http://localhost:80/Exyzer",
+			"inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+			"applicationUrl": "https://localhost:443;http://localhost:80",
 			"environmentVariables": {
 				"ASPNETCORE_ENVIRONMENT": "Production"
 			}
