--- a/src/Exyzer.Apps.Web/Exyzer.Apps.Web.csproj
+++ b/src/Exyzer.Apps.Web/Exyzer.Apps.Web.csproj
@@ -7,7 +7,7 @@
 **-->
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 	<PropertyGroup>
-		<OutputType>Library</OutputType>
+		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.7" />
