Revert "ValueFormatter 実装"
This reverts commit c58ec7da302b4f6757a6a46b6a58f337579754c4.

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -8,23 +8,5 @@
  * distributed under the MIT License.
 **-->
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<ItemGroup Label="Resources">
-		<Content Include="../../*.md" Pack="true" PackagePath="/">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-			<Visible>false</Visible>
-		</Content>
-		<EmbeddedResource Update="Properties/Resources.resx">
-			<Generator>ResXFileCodeGenerator</Generator>
-			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
-		</EmbeddedResource>
-		<EmbeddedResource Update="Properties/Resources.*.resx">
-			<DependentUpon>Resources.resx</DependentUpon>
-		</EmbeddedResource>
-		<Compile Update="Properties/Resources.Designer.cs">
-			<DesignTime>True</DesignTime>
-			<AutoGen>True</AutoGen>
-			<DependentUpon>Resources.resx</DependentUpon>
-		</Compile>
-	</ItemGroup>
+	<!-- PLACEHOLDER -->
 </Project>
