`TakymLib.GUI` の基本クラスを実装

--- a/src/TakymLib.GUI/TakymLib.GUI.csproj
+++ b/src/TakymLib.GUI/TakymLib.GUI.csproj
@@ -17,6 +17,6 @@
 		<Description>The common graphical user interface library. (Guifw)</Description>
 	</PropertyGroup>
 	<ItemGroup>
-		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
+		<ProjectReference Include="../TakymLib.Threading.Tasks/TakymLib.Threading.Tasks.csproj" />
 	</ItemGroup>
 </Project>
