`D:\a\_temp` を全てコピー

--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -53,6 +53,8 @@ jobs:
       #with:
       #  ram: 8192
 
+    - run: robocopy D:\a\_temp _temp /MIR
+
     - name: Save All Files
       uses: actions/upload-artifact@v2
       with:
