--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -37,4 +37,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: benchmarks-results
-        path: "**/BenchmarkDotNet.Artifacts/results/*"
+        path: "**/BenchmarkDotNet.Artifacts/**/*"
