--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -25,6 +25,17 @@ jobs:
       fail-fast: false
       matrix:
         bc: [ Debug, Release ]
+        projects:
+          - "src/TakymLib/TakymLib.csproj"
+          - "src/TakymLib.Aspect/TakymLib.Aspect.csproj"
+          - "src/TakymLib.CommandLine/TakymLib.CommandLine.csproj"
+          - "src/TakymLib.Logging/TakymLib.Logging.csproj"
+          - "src/TakymLib.Security/TakymLib.Security.csproj"
+          - "src/TakymLib.Text/TakymLib.Text.csproj"
+          - "src/TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj"
+          - "src/TakymLib.Threading.Tasks/TakymLib.Threading.Tasks.csproj"
+          - "src/TakymLib.ConsoleApp/TakymLib.ConsoleApp.csproj"
+          - "tests/TakymLibTests.csproj"
 
     steps:
     - name: Checkout repository
@@ -44,7 +55,7 @@ jobs:
       with:
         dotnet-version: 5.0.301
     - name: Build
-      run: dotnet build -c ${{ matrix.bc }}
+      run: dotnet build -c ${{ matrix.bc }} ${{ matrix.projects }}
 
     # Analyze
     - name: Perform CodeQL Analysis
