--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -38,4 +38,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: benchmarks-results
-        path: "**/BenchmarkDotNet.Artifacts/**/*"
+        path: "**/BenchmarkDotNet.Artifacts/../**/*"
