--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -38,4 +38,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: benchmarks-results
-        path: "**/BenchmarkDotNet.Artifacts/../**/*"
+        path: "**/tests/bin/**"
+        #path: "**/BenchmarkDotNet.Artifacts/**/*"
