--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -38,5 +38,6 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: benchmarks-results
-        path: "**/tests/bin/**"
-        #path: "**/BenchmarkDotNet.Artifacts/**/*"
+        path: |
+          "**/BenchmarkDotNet.Artifacts/**/*"
+          "**/tests/bin/Benchmark/*/????????-????-????-????-????????????/**"
