--- a/tests/TakymLibTests.csproj
+++ b/tests/TakymLibTests.csproj
@@ -33,5 +33,18 @@
 
 		<!-- ライブラリへの参照は下記のプロジェクトに追加する。 -->
 		<ProjectReference Include="../src/TakymLib.ConsoleApp/TakymLib.ConsoleApp.csproj" />
+
+		<EmbeddedResource Update="Properties/Resources.resx">
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Properties/Resources.*.resx">
+			<DependentUpon>Resources.resx</DependentUpon>
+		</EmbeddedResource>
+		<Compile Update="Properties/Resources.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Resources.resx</DependentUpon>
+		</Compile>
 	</ItemGroup>
 </Project>
