--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -38,6 +38,6 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: benchmarks-results
-        path: "#"
+        path: "*"
           #"**/BenchmarkDotNet.Artifacts/**/*"
           #"**/tests/bin/Benchmark/*/????????-????-????-????-????????????/**"
