--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -39,5 +39,4 @@ jobs:
       with:
         name: benchmarks-results
         path: |
-          tests/bin/Benchmark/*/BenchmarkDotNet.Artifacts/**
-          tests/bin/Benchmark/*/????????-????-????-????-????????????/**
+          tests/bin/Benchmark/**
