--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -40,5 +40,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: benchmarks-results
-        path: |
-          tests/bin/Benchmark/**
+        path: tests/bin/Benchmark/**
