--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1.8.1
       with:
-        dotnet-version: 5.0.301
+        dotnet-version: 5.0.x
     - name: Build
       run: dotnet build -c ${{ matrix.bc }}
 
