--- a/.github/workflows/NuGet.yml
+++ b/.github/workflows/NuGet.yml
@@ -22,12 +22,12 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1.8.1
       with:
-        dotnet-version: 5.0.301
+        dotnet-version: 5.0.x
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
       with:
         nuget-api-key: ${{ secrets.NUGET_API_KEY }}
-        nuget-version: 5.9.1
+        nuget-version: latest
     - name: Restore dependencies
       run: dotnet restore TakymLib.sln
     - name: Build
