--- a/.gitignore
+++ b/.gitignore
@@ -204,13 +204,13 @@ PublishScripts/
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
-#!**/[Pp]ackages/repositories.config
+!**/[Pp]ackages/repositories.config
 # NuGet v3's project.json files produces more ignorable files
 *.nuget.props
 *.nuget.targets
 
 # Nuget personal access tokens and Credentials
-# nuget.config
+nuget.config
 
 # Microsoft Azure Build Output
 csx/
