--- a/TakymLib.ProjectSettings.targets
+++ b/TakymLib.ProjectSettings.targets
@@ -50,6 +50,9 @@
 			<DependentUpon>Resources.resx</DependentUpon>
 		</Compile>
 	</ItemGroup>
+	<ItemGroup Condition="!Exists('Properties/AssemblyInfo.cs')">
+		<Compile Include="../TakymLib/Properties/AssemblyInfo.cs" Link="Properties/AssemblyInfo.cs" />
+	</ItemGroup>
 	<ItemGroup Condition="!Exists('Resources/Logo.png')">
 		<Content Include="../../LOGO.png" Link="Resources/Logo.png" Pack="true" PackagePath="/">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
