--- a/docs/TakymLibDocumentation.csproj
+++ b/docs/TakymLibDocumentation.csproj
@@ -8,7 +8,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<IsWindows>$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))</IsWindows>
+		<IsWindows>$([MSBuild]::IsOSPlatform('Windows'))</IsWindows>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="docfx.console" Version="2.58.9">
