--- a/src/TakymLib.ConsoleApp/TakymLib.ConsoleApp.csproj
+++ b/src/TakymLib.ConsoleApp/TakymLib.ConsoleApp.csproj
@@ -13,17 +13,19 @@
 	</PropertyGroup>
 	<Import Project="../../TakymLib.ProjectSettings.targets" />
 	<PropertyGroup>
-		<Product>TakymLib</Product>
+		<Product>TakymLib.ConsoleApp</Product>
 		<Description>The test console application for validation. The compatibility of this is not preserved.</Description>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
 		<ProjectReference Include="../TakymLib.Aspect/TakymLib.Aspect.csproj" />
 		<ProjectReference Include="../TakymLib.CommandLine/TakymLib.CommandLine.csproj" />
+		<ProjectReference Include="../TakymLib.Extensibility/TakymLib.Extensibility.csproj" />
 		<ProjectReference Include="../TakymLib.Logging/TakymLib.Logging.csproj" />
 		<ProjectReference Include="../TakymLib.Security/TakymLib.Security.csproj" />
 		<ProjectReference Include="../TakymLib.Text/TakymLib.Text.csproj" />
 		<ProjectReference Include="../TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj" />
 		<ProjectReference Include="../TakymLib.Threading.Tasks/TakymLib.Threading.Tasks.csproj" />
+		<!-- TakymLib.UI はテストの対象に含めない。 -->
 	</ItemGroup>
 </Project>
