--- a/src/TakymLib.Logging/TakymLib.Logging.csproj
+++ b/src/TakymLib.Logging/TakymLib.Logging.csproj
@@ -18,6 +18,7 @@
 		<PackageTags>$(PackageTags), Logging, Report</PackageTags>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<ProjectReference Include="../TakymLib/TakymLib.csproj" />
 	</ItemGroup>
 </Project>
