ソリューション設定変更＆ワークフローファイル更新

--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -29,12 +29,12 @@ jobs:
       run: dotnet restore TakymLib.sln
     # Build
     - name: Build (Target Programs)
-      run: dotnet build -c Release --no-restore
+      run: dotnet build -c ReleaseW --no-restore
     - name: Build (Testing Environment)
-      run: dotnet build -c Benchmark --no-restore
+      run: dotnet build -c BenchmarkW --no-restore
     # Test
     - name: Test
-      run: dotnet test -c Benchmark --no-build --verbosity normal
+      run: dotnet test -c BenchmarkW --no-build --verbosity normal
     # Upload Artifacts
     - name: Save Benchmarks Results
       uses: actions/upload-artifact@v2
