--- a/.github/workflows/CodeQL.2.yml
+++ b/.github/workflows/CodeQL.2.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        bc: [ Debug, Release, Benchmark ]
+        bc: [ Debug, DebugW, Release, ReleaseW, Benchmark, BenchmarkW ]
 
     steps:
     - name: Checkout repository
