--- a/.github/workflows/Benchmark.yml
+++ b/.github/workflows/Benchmark.yml
@@ -25,13 +25,11 @@ jobs:
       uses: actions/setup-dotnet@v1.8.2
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore TakymLib.sln
     # Build
     - name: Build (Target Programs)
-      run: dotnet build -c ReleaseW --no-restore
+      run: dotnet build -c ReleaseW
     - name: Build (Testing Environment)
-      run: dotnet build -c BenchmarkW --no-restore
+      run: dotnet build -c BenchmarkW
     # Test
     - name: Test
       run: dotnet test -c BenchmarkW --no-build --verbosity normal
