--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -30,15 +30,17 @@ jobs:
       uses: actions/setup-dotnet@v1.8.2
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore TakymLib.sln
     # Build
     - name: BuildW
       if: matrix.os == 'windows-latest'
-      run: dotnet build -c ${{ matrix.bc }}W --no-restore
+      run: dotnet build -c ${{ matrix.bc }}W
     - name: Build
       if: steps.BuildW.conclusion == 'skipped'
-      run: dotnet build -c ${{ matrix.bc }} --no-restore
+      run: dotnet build -c ${{ matrix.bc }}
     # Test
+    - name: TestW
+      if: matrix.os == 'windows-latest'
+      run: dotnet test -c ${{ matrix.bc }}W --no-build --verbosity normal
     - name: Test
+      if: steps.TestW.conclusion == 'skipped'
       run: dotnet test -c ${{ matrix.bc }} --no-build --verbosity normal
