暗黙的な using を無効化

--- a/CommonProjectSettings.targets
+++ b/CommonProjectSettings.targets
@@ -13,6 +13,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 		<ProduceReferenceAssembly>true</ProduceReferenceAssembly>
