--- a/src/TakymLib.ConsoleApp/TakymLib.ConsoleApp.csproj
+++ b/src/TakymLib.ConsoleApp/TakymLib.ConsoleApp.csproj
@@ -27,5 +27,7 @@
 		<ProjectReference Include="../TakymLib.Threading.Distributed/TakymLib.Threading.Distributed.csproj" />
 		<ProjectReference Include="../TakymLib.Threading.Tasks/TakymLib.Threading.Tasks.csproj" />
 		<!-- TakymLib.UI はテストの対象に含めない。 -->
+
+		<Compile Include="../TakymLib/Text/BuildString.cs" Link="Text/BuildString" />
 	</ItemGroup>
 </Project>
