--- a/src/TakymLib.UI/TakymLib.UI.csproj
+++ b/src/TakymLib.UI/TakymLib.UI.csproj
@@ -5,7 +5,7 @@
  *
  * distributed under the MIT License.
 **-->
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<AssemblyName>TakymLib.UI</AssemblyName>
 		<RootNamespace>TakymLib.UI</RootNamespace>
