--- a/CommonProjectSettings.targets
+++ b/CommonProjectSettings.targets
@@ -43,7 +43,7 @@
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
 		<DefineConstants>DEBUG;TRACE</DefineConstants>
 		<Optimize>false</Optimize>
-		<DebugType>portable</DebugType>
+		<DebugType>embedded</DebugType>
 		<DebugSymbols>true</DebugSymbols>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
@@ -55,7 +55,7 @@
 	<PropertyGroup Condition="'$(Configuration)'=='Benchmark'">
 		<DefineConstants>BENCHMARK;TRACE</DefineConstants>
 		<Optimize>true</Optimize>
-		<DebugType>pdbonly</DebugType>
+		<DebugType>portable</DebugType>
 		<DebugSymbols>true</DebugSymbols>
 	</PropertyGroup>
 </Project>
