--- a/src/TakymApp/appsettings.custom.ini
+++ b/src/TakymApp/appsettings.custom.ini
@@ -1,4 +1,4 @@
-﻿# ***********************************************************
+# ***********************************************************
 # * TakymLib                                                *
 # * Copyright (C) 2020-2022 Yigty.ORG; all rights reserved. *
 # * Copyright (C) 2020-2022 Takym.                          *
@@ -7,6 +7,8 @@
 # ***********************************************************
 
 # このファイルには「appsettings.json」、「appsettings.generated.xml」よりも優先される設定を記述します。
+# このファイルで変更を加えた設定は、システム設定ウィンドウで変更できなくなりますのでご注意ください。
+# ただし、コマンド行引数はこのファイルよりも優先されます。
 
 # 拡張機能の読み込みを常に拒否する場合は下記のコメントを解除します。
 ;DisallowExtensions=true
